--- a/gb/20/12/8/n12604170.md
+++ b/gb/20/12/8/n12604170.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fjdhch354/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/fjdhch354/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fjdhch354/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fjdhch354/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fjdhch354/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【新闻大家谈】暗网交易被揭 涉数千万选民</h2>
-<a href="https://git.io/JI0Q4"><img width="600" src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d3vg08phoazui6.cloudfront.net/H3ow8Ag4d"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>欢迎收看周二（12月8日）的《新闻大家谈》。（大纪元合成）
 </h6>
 <hr>
-	<p>【大纪元2020年12月08日讯】大家好，欢迎收看周二（12月8日）的《<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E5%A4%A7%E5%AE%B6%E8%B0%88.md#1">新闻大家谈</a>》，我是林澜。</p>
-<p>今天话题：美国暗网交易被揭，涉数千万选民；法律战升级，聚焦最高法院，<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）开始个人提诉<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>；美情报首长：拜登政府？尚未定论；14名人大副委员长全数被美国制裁……</p>
-<p><center><a src=""></a><a href="https://git.io/JI0Q4"><img width="600" src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/QoXV8vJ-woo" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
+	<p>【大纪元2020年12月08日讯】大家好，欢迎收看周二（12月8日）的《<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E5%A4%A7%E5%AE%B6%E8%B0%88.md#1">新闻大家谈</a>》，我是林澜。</p>
+<p>今天话题：美国暗网交易被揭，涉数千万选民；法律战升级，聚焦最高法院，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）开始个人提诉<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>；美情报首长：拜登政府？尚未定论；14名人大副委员长全数被美国制裁……</p>
+<p><center><a src=""></a><a href="https://d3vg08phoazui6.cloudfront.net/H3ow8Ag4d"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/QoXV8vJ-woo" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
 <h2>1.【暗网交易 3500万美国选民记录挂牌卖】</h2>
 <p>昨天在查找节目资料的时候，无意中看到一条2018年的消息：2家研究公司发现，大约3500万美国选民的记录，在一个热门的黑客论坛上，明码标价地出售，共涉及美国19个州。</p>
 <p>这些数据，据称来自2018年的选民登记记录，包括姓名、电话号码、住址、选举历史等投票相关信息。</p>
@@ -16,7 +16,7 @@
 <p>这名卖家还承诺，每个星期都会从州政府线人那里，收到信息，并更新选民登记数据。</p>
 <p>报告该信息的2家公司：Anomali Labs和Intel 471说，他们对在销售的数据进行了全面审查，确定数据真实有效。</p>
 <p>这些数据可能会被怎样滥用？这次大选有没有相关的迹象？</p>
-<h2>2.【法律战升级 <ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>个人诉<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>】</h2>
+<h2>2.【法律战升级 <ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>个人诉<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>】</h2>
 <p>12月7日释放出的法庭文件显示，川普总统和副总统彭斯，以个人身份作为原告，在威斯康星州密尔沃基县的巡回法庭提起诉讼，要求推翻密尔沃基县和戴恩县的选举结果，原因是这些地方存在选举不公。被告是拜登及其搭档贺锦丽。</p>
 <p>之前，川普团队自费300万美元，在这两个县展开重新计票，虽然计票结果仍然是拜登领先，但川普在推特上说，重新计票的目的是要找到非法投票的人，并表示已经发现了许多非法选票。</p>
 <p>在其它州的法律战，大多是以川普法律代表或共和党人提告，这次罕见在于川普和彭斯以个人身份提告，似乎志在必得？这两个县目前曝光出了哪些问题？</p>
@@ -33,7 +33,7 @@
 <p>鲜为人知的是，在2000年总统大选时，克鲁兹就曾以律师背景，在共和党总统候选人小布什团队中担纲顾问，并以宪法学背景，帮助小布什在最高法院赢得了至关重要的佛州大选计票诉讼，最终小布什入主白宫。</p>
 <p>为什么77号法案被指控违反宾州宪法？如果胜诉意味着什么？</p>
 <p>克鲁兹的政治理念？这次大选后，他表现得非常突出，不畏惧政治压力力挺川普，为什么？</p>
-<p>今天就是<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E9%80%89.md#1">美国大选</a>的“安全港”截止期，也就是各州必须确定，哪位候选人赢得了本地选举；否则过期不候，国会可以裁决拒绝他们的选举人票。那么，最高法院要求宾州州政府今天早上9点回应诉讼，是否意味着最高法院今天稍晚可能会下达紧急命令呢？我们会密切关注。</p>
+<p>今天就是<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E9%80%89.md#1">美国大选</a>的“安全港”截止期，也就是各州必须确定，哪位候选人赢得了本地选举；否则过期不候，国会可以裁决拒绝他们的选举人票。那么，最高法院要求宾州州政府今天早上9点回应诉讼，是否意味着最高法院今天稍晚可能会下达紧急命令呢？我们会密切关注。</p>
 <p>不过根据美国1876年的先例，以及在宪法的框架下，在“安全港”之后，总统候选人仍然可以继续发起诉讼，反转结果。</p>
 <h2>5.【美国家情报首长：拜登政府？等等再说】</h2>
 <p>美国最高情报官员，也对法律战的关键影响，表示期待。</p>
@@ -59,12 +59,12 @@
 <p>这次大选，让很多深层问题浮出水面。就像美国国父们所说的，“美国宪法只为有道德、有宗教信仰的人们而制定，它完全不适用对其他任何人的治理。”美国的选举制度也是一样，防君子不防小人。在不少民主党州，大选投票时的身份验证要求，甚至没有机场安检严格。川普总统也表示，在赢得胜利后，将通过具有里程碑意义的选举改革。</p>
 <p>在这次选举里，美国选举制度有哪些漏洞被利用了？需要怎样的改革？这些改革会不会造成联邦权力过大、侵蚀州权？</p>
 <h2><strong>网络收看方式：</strong></h2>
-<p>大纪元新闻网：<ahref="https://github.com/fjdhch354/djy/blob/master/gb/nf1334917.md#1" target="_blank" rel="noopener noreferrer">https://github.com/fjdhch354/djy/blob/master/gb/nf1334917.md#1</a><br />
-<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%e6%96%b0%e8%81%9e%e5%a4%a7%e5%ae%b6%e8%ab%87.md#1">新闻大家谈</a>：<ahref=""></a><a href="https://git.io/JI0Q4"><img width="600" src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/c/%E4%BB%8A%E6%97%A5%E7%86%B1%E9%BB%9E/featured?view_as=subscriber">"></a><a href="https://git.io/JI0Q4"><img width="600" src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/channel/UC_wRsYpCP2kuql6BuTM7W_g?view_as=subscriber</a></p>
-<p>新唐人直播：<ahref=""></a><a href="https://git.io/JI0Q4"><img width="600" src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/watch?v=p0r1j2CGOX4&amp;feature=youtu.be" target="_blank" rel="noopener noreferrer">"></a><a href="https://git.io/JI0Q4"><img width="600" src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/watch?v=p0r1j2CGOX4&amp;feature=youtu.be</a></p>
+<p>大纪元新闻网：<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/nf1334917.md#1" target="_blank" rel="noopener noreferrer">https://github.com/kobfyi3602/djy/blob/master/gb/nf1334917.md#1</a><br />
+<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%e6%96%b0%e8%81%9e%e5%a4%a7%e5%ae%b6%e8%ab%87.md#1">新闻大家谈</a>：<ahref=""></a><a href="https://d3vg08phoazui6.cloudfront.net/H3ow8Ag4d"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/%E4%BB%8A%E6%97%A5%E7%86%B1%E9%BB%9E/featured?view_as=subscriber">"></a><a href="https://d3vg08phoazui6.cloudfront.net/H3ow8Ag4d"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UC_wRsYpCP2kuql6BuTM7W_g?view_as=subscriber</a></p>
+<p>新唐人直播：<ahref=""></a><a href="https://d3vg08phoazui6.cloudfront.net/H3ow8Ag4d"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/watch?v=p0r1j2CGOX4&amp;feature=youtu.be" target="_blank" rel="noopener noreferrer">"></a><a href="https://d3vg08phoazui6.cloudfront.net/H3ow8Ag4d"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/watch?v=p0r1j2CGOX4&amp;feature=youtu.be</a></p>
 <p>【支持】为真相护航 为沉默发声，就在今天，支持大纪元<br />
 <ahref="https://donate.epochtimes.com/" target="_blank" rel="noopener noreferrer">https://donate.epochtimes.com</a></p>
-<p>新唐人大纪元《<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%e6%96%b0%e8%81%9e%e5%a4%a7%e5%ae%b6%e8%ab%87.md#1">新闻大家谈</a>》制作组</p>
+<p>新唐人大纪元《<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%e6%96%b0%e8%81%9e%e5%a4%a7%e5%ae%b6%e8%ab%87.md#1">新闻大家谈</a>》制作组</p>
 <p>责任编辑：孙芸?#</p>
 <p>&nbsp;</p>
 	
@@ -72,42 +72,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/2/n12590985.md#1">【新闻大家谈】川普转推新唐人 精锐盟军出击</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/3/n12593837.md#1">【新闻大家谈】川普最重要演说释何信号？</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/4/n12596002.md#1">【新闻大家谈】拜登舞弊实锤证据 被指政变</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12601507.md#1">【新闻大家谈】决战时刻 川普内外出击</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/12/2/n12590985.md#1">【新闻大家谈】川普转推新唐人 精锐盟军出击</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/12/3/n12593837.md#1">【新闻大家谈】川普最重要演说释何信号？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/12/4/n12596002.md#1">【新闻大家谈】乔州参议院听证会：曝大选舞弊证据</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751708.md#1">【新闻大家谈】星链三大关键技术 中共忌惮</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/2/n10356748.md#1" target="_blank">林辉：并未救国的“五四运动”只是胡闹而已</a></li><li><a href="https://github.com/fjdhch354/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869347.md#1" target="_blank">感恩节 法轮大法弟子感念师恩</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/11/n11648921.md#1" target="_blank">林辉：国家足球队头号前锋文革缘何自杀？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/2/n9690997.md#1" target="_blank">修炼两年顽症消失 德国女士感恩大法</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/10/3/n12449841.md#1">《圣经》与《推背图》预言的应验与变换9</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/11/28/n12581077.md#1">前世今生一个女人两度转变他的人生</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/11/27/n12580382.md#1">刘伯温说寓言 如何面对权术威胁</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/1/n12588670.md#1">姜子牙之女做王后 历经千年贤名传</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/11/19/n12560430.md#1">但丁《神曲》故事：欺诈——毒害世界的怪物</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/8/n12602741.md#1">【珍言真语】林建诚：有线台裁员 新闻自由不再</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12602304.md#1">【新闻看点】法律战四大进展 川普：为美国而战</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12601669.md#1">【微视频】川普决心很重要 拆穿拜登“国王新衣”</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/6/n12599095.md#1">【大选更新12.6】白宫：全美存在统计异常</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/6/n12599402.md#1">威州邮递员指证：邮局下令更改选票邮戳日期</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/6/n12599572.md#1">鲍威尔转发翟东升视频：中共如何搞定拜登</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12600656.md#1">Sana曾与确诊者请夏接触 TWICE全员接受检疫</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12602498.md#1">孙俪成大陆考生人物素描题 美貌皆非网友笑翻</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/6/n12599611.md#1">35岁徐佳莹幽默报喜：我刚刚生了一个孩子</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12600579.md#1">TWICE于MAMA获两奖 唱新歌登热搜与收视冠军</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12602271.md#1">游戏环节并列两岸旗帜 韩综《RM》辱华？</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12600354.md#1">神秘金属柱子如雨后春笋 英国小岛也出现了</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/3/n12594410.md#1">忧郁症有4大症状 怎样改善？治疗和饮食全图解</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12600868.md#1">史上首次 美太空人采收在外太空种植的萝卜</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/6/n12599786.md#1">大雪节气养生早睡晚起 3招保养心血管、增免疫</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12600653.md#1">与妻子吵架想散心 义国男子竟走了450公里</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/8/n12604170.htm">【新闻大家谈】暗网交易被揭 涉数千万选民</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/8/n12604170.htm">【新闻大家谈】暗网交易被揭 涉数千万选民</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fjdhch354/djy/blob/master/gb/20/12/8/n12604170.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fjdhch354/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fjdhch354/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fjdhch354/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/12/8/n12604170.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
